[gd_scene load_steps=24 format=3 uid="uid://icbfj05gq8vk"]

[ext_resource type="Script" path="res://cotu/CotuControl.gd" id="1_aleek"]
[ext_resource type="Script" path="res://cotu/CotuHurtbox.gd" id="2_fvpfg"]
[ext_resource type="PackedScene" uid="uid://cjtok0eqv0ugl" path="res://glb_inherited_scenes/cotu_anims_11.tscn" id="3_mojle"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_80wmm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kxw61"]

[sub_resource type="SphereMesh" id="SphereMesh_dx5gt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d7hp7"]
albedo_color = Color(0.52549, 0.00392157, 0.894118, 1)

[sub_resource type="PrismMesh" id="PrismMesh_jrkru"]
material = SubResource("StandardMaterial3D_d7hp7")
size = Vector3(0.75, 0.75, 0.25)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_agv1c"]
animation = &"AerialEvadeFast"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t00fa"]
animation = &"FrontTwistFlipFast"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kvedh"]
animation = &"Idle_pose"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j62tw"]
animation = &"DodgeRun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nl5hg"]
animation = &"Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ivebn"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kvedh")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_j62tw")
blend_point_1/pos = 15.0
blend_point_2/node = SubResource("AnimationNodeAnimation_nl5hg")
blend_point_2/pos = 10.0
min_space = 0.0
max_space = 15.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nerqb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e8r0g"]
xfade_time = 0.15
advance_mode = 2
advance_condition = &"just_dodged"
advance_expression = "abs(walk_input.y) == 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0y1n2"]
xfade_time = 0.15
advance_mode = 2
advance_condition = &"just_dodged"
advance_expression = "abs(walk_input.y) > 0"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ieh2i"]
xfade_time = 0.2
priority = 2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pc5go"]
xfade_time = 0.2
priority = 2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rdo08"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"just_dodged"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ggvq7"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"just_dodged"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_auidk"]
states/AerialEvadeFast/node = SubResource("AnimationNodeAnimation_agv1c")
states/AerialEvadeFast/position = Vector2(314.193, 5.8076)
states/FrontTwistFlipFast/node = SubResource("AnimationNodeAnimation_t00fa")
states/FrontTwistFlipFast/position = Vector2(531.693, 5.4951)
states/RunBlendSpace/node = SubResource("AnimationNodeBlendSpace1D_ivebn")
states/RunBlendSpace/position = Vector2(418.693, 150.5)
transitions = ["Start", "RunBlendSpace", SubResource("AnimationNodeStateMachineTransition_nerqb"), "RunBlendSpace", "AerialEvadeFast", SubResource("AnimationNodeStateMachineTransition_e8r0g"), "RunBlendSpace", "FrontTwistFlipFast", SubResource("AnimationNodeStateMachineTransition_0y1n2"), "AerialEvadeFast", "RunBlendSpace", SubResource("AnimationNodeStateMachineTransition_ieh2i"), "FrontTwistFlipFast", "RunBlendSpace", SubResource("AnimationNodeStateMachineTransition_pc5go"), "AerialEvadeFast", "FrontTwistFlipFast", SubResource("AnimationNodeStateMachineTransition_rdo08"), "FrontTwistFlipFast", "AerialEvadeFast", SubResource("AnimationNodeStateMachineTransition_ggvq7")]
graph_offset = Vector2(44.273, -39.1124)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_wg7n8"]
graph_offset = Vector2(-91.2, 117.12)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_auidk")
nodes/StateMachine/position = Vector2(80, 150)
node_connections = [&"output", 0, &"StateMachine"]

[node name="cotuCB" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 74
script = ExtResource("1_aleek")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_80wmm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kxw61")

[node name="CameraTwistPivot" type="Node3D" parent="."]

[node name="CameraPitchPivot" type="Node3D" parent="CameraTwistPivot"]

[node name="CameraVisualObject" type="MeshInstance3D" parent="CameraTwistPivot/CameraPitchPivot"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 6)
mesh = SubResource("SphereMesh_dx5gt")
skeleton = NodePath("")

[node name="Camera3D" type="Camera3D" parent="CameraTwistPivot/CameraPitchPivot/CameraVisualObject"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="RangPointerPivot" type="Node3D" parent="."]

[node name="RangPointer" type="MeshInstance3D" parent="RangPointerPivot"]
transform = Transform3D(1, -6.97574e-16, -1.5246e-23, -1.5246e-23, -4.37114e-08, 1, -6.97574e-16, -1, -4.37114e-08, 2.08165e-12, 2.08165e-12, -2)
mesh = SubResource("PrismMesh_jrkru")
skeleton = NodePath("../..")

[node name="Hurtbox" type="Area3D" parent="."]
collision_mask = 11
script = ExtResource("2_fvpfg")
health = 10000
enemy_hitboxes = ["EnemyHitbox"]

[node name="HurtboxCollider" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_kxw61")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_wg7n8")
anim_player = NodePath("../CotuAnims/AnimationPlayer")
advance_expression_base_node = NodePath("..")
active = true
parameters/StateMachine/conditions/just_dodged = false
parameters/StateMachine/RunBlendSpace/blend_position = 0.000634115

[node name="CotuAnims" parent="." instance=ExtResource("3_mojle")]

[node name="Skeleton3D" parent="CotuAnims/Armature" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.988, 2.08165e-12)
bones/0/position = Vector3(6.74478e-05, 0.996227, -0.0689465)
bones/0/rotation = Quaternion(0.00357604, 0.0033651, 0.00430082, 0.999979)
bones/1/position = Vector3(1.8541e-08, 0.0922872, -0.0106759)
bones/1/rotation = Quaternion(0.00139748, 0.0105679, -0.00611599, 0.999924)
bones/2/rotation = Quaternion(-0.0161189, -0.0157259, -0.00058418, 0.999746)
bones/3/rotation = Quaternion(-0.00199819, 0.00116452, 0.00503645, 0.999985)
bones/4/rotation = Quaternion(0.0697322, 0.000240528, 0.000844738, 0.997565)
bones/7/position = Vector3(0.0663166, 0.115124, 0.0320526)
bones/7/rotation = Quaternion(-0.589018, -0.462307, 0.537803, -0.387425)
bones/8/rotation = Quaternion(0.559894, 0.0678373, -0.0526153, 0.824105)
bones/9/rotation = Quaternion(8.51824e-09, -2.08124e-06, 0.270224, 0.962798)
bones/10/rotation = Quaternion(0.0233854, -0.111941, -0.0135617, 0.993347)
bones/31/position = Vector3(-0.0617995, 0.116818, 0.0315779)
bones/31/rotation = Quaternion(0.56203, -0.490112, 0.53472, 0.397476)
bones/32/rotation = Quaternion(0.579089, -0.0833277, 0.0195048, 0.81076)
bones/33/rotation = Quaternion(-3.83798e-07, 1.9683e-06, -0.23682, 0.971554)
bones/34/rotation = Quaternion(0.0409741, 0.0222757, -0.0694973, 0.996491)
bones/55/rotation = Quaternion(0.0504402, 0.140443, 0.987546, -0.0498494)
bones/55/scale = Vector3(1, 0.999997, 0.999999)
bones/56/rotation = Quaternion(-0.145617, 3.59501e-07, -1.33954e-07, 0.989341)
bones/57/rotation = Quaternion(0.47364, 0.0695569, -0.0523084, 0.876408)
bones/58/rotation = Quaternion(0.291364, -0.0948206, 0.0257288, 0.951554)
bones/60/rotation = Quaternion(-0.0570335, 0.0489496, 0.996275, 0.0422724)
bones/60/scale = Vector3(1, 1, 0.999997)
bones/61/rotation = Quaternion(-0.202627, -2.67316e-06, -5.3785e-07, 0.979256)
bones/62/rotation = Quaternion(0.591759, -0.0741544, 0.0264893, 0.80226)
bones/63/rotation = Quaternion(0.284442, 0.0939772, -0.0275113, 0.953679)

[editable path="CotuAnims"]
